--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="assets/logo.jpg" alt="Climate Logo" class="logo" />
+    <img src="assets/logo1.jpg" alt="Climate Logo" class="logo" />
     <h1 class="site-title">CLIMINNOV</h1>
     <div class="site-subtitle">The Green</div>
   </header>
